// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid type "col3" should render a grid with 3 items 1`] = `
<div
  aria-label=""
  className="col3"
>
  <div>
    <img
      alt="item #8dda478e-342b-44f1-b6d8-3a99278efbf0"
      src="https://assets.onrewind.tv/events-posters/7e418a39-6b39-4764-a27b-2daac01acd7b.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div>
    <img
      alt="item #9bca784d-212a-32f9-d8b6-2b77648deae8"
      src="https://assets.onrewind.tv/events-posters/219709c1-93d3-4bed-a681-369089dce12c_liveOff.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div>
    <img
      alt="item #38fd3e65-9f13-4135-acf0-1e274c83561e"
      src="http://s1.dmcdn.net/qSL4X.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Grid type "col4" should render a grid with 4 items 1`] = `
<div
  aria-label=""
  className="col4"
>
  <div>
    <img
      alt="item #8dda478e-342b-44f1-b6d8-3a99278efbf0"
      src="https://assets.onrewind.tv/events-posters/7e418a39-6b39-4764-a27b-2daac01acd7b.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div>
    <img
      alt="item #9bca784d-212a-32f9-d8b6-2b77648deae8"
      src="https://assets.onrewind.tv/events-posters/219709c1-93d3-4bed-a681-369089dce12c_liveOff.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div>
    <img
      alt="item #38fd3e65-9f13-4135-acf0-1e274c83561e"
      src="http://s1.dmcdn.net/qSL4X.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div>
    <img
      alt="item #38fd3e65-9f13-4135-acf0-1e274c83561a"
      src="http://s1.dmcdn.net/qSL4X.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
